FIX: Change main-content to be position static - Nav hidden by page content on scroll

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,7 @@ html {
 }
 
 .main-content {
-  position: relative;
+  position: static;
   top: 5.3125rem; /* To offset for fixed header. */
 }
 
